# linux_configs

./: .gitignore  README.md  Xresources  bash_additions  bash_additions.sh  caffeine.sh  i3-requirements  input-remapper_middle-click-emulation.tip  iso-rip.sh  tmux.conf  vimrc  vimrc-minimal
ansible/: apt-package-list  flatpak-package-list  setup-debian.yml
ansible/debian/: apt-package-list  fastfetch_config.jsonc  get-dependencies.sh  install-nvidia.yml  setup  setup-debian.yml
ansible/debian/files/: apt-package-list  flatpak-package-list
ansible/debian/files/nvidia/: nvidia-modeset.conf  nvidia.conf  (+1 more)
cron/: example.txt  update_morewaita.sh
darkman/: config.yaml
desktop-files/: org.gnome.gitlab.cheywood.Buffer.desktop
dmenus/: fzf-copy-pass.sh  fzf-define.sh  launch_with_fzf.sh  wlr-copy-pass.sh
dunst/: dunstrc
dwl/: config.h  dwl-startup-programs.sh  launch-dwl.sh  pertag.patch
dwl/dwl-v0.7/: config.def.h  config.h  dwl.c  dwl.desktop
dwl/dwl_statusbar/: dwm_bar.sh
dwl/dwl_statusbar/bar-functions/: dwm_battery.sh  dwm_date.sh  dwm_resources.sh
dwl/dwlb/: .gitignore  config.h
dwl/statusnotifier-systray-gtk4/: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
dwl/statusnotifier-systray-gtk4/docs/: meson.build  statusnotifier.toml.in  urlmap.js
dwl/statusnotifier-systray-gtk4/examples/: demo.c  demo.py  meson.build
dwl/statusnotifier-systray-gtk4/src/: meson.build  sndbusmenu.c  sndbusmenu.h  snitem.c  snitem.h  snsystray.c  snwatcher.c  snwatcher.h
dwl/statusnotifier-systray-gtk4/subprojects/: gi-docgen.wrap
dwl/waybar/: config.jsonc  style.css
dwm/: dwm.desktop  run-dwm.sh
dwm/bsd-scripts/: vol-down.sh  vol-mute.sh  vol-up.sh
dwm/custom-scripts/: bright-down.sh  bright-up.sh  vol-down.sh  vol-mute.sh  vol-up.sh
dwm/dwm-bar/: dwm_bar.sh
dwm/dwm-bar/bar-functions/: dwm_backlight.sh  dwm_date.sh  dwm_weather.sh
dwm/freebsd/: run-dwm.sh
dwm/freebsd/dwm/: .dwm.c.swp  config.h  config.mk  dwm
dwm/freebsd/dwm-bar/: .dwm_log  .xinitrc  dwm_bar.sh
dwm/freebsd/st/: config.h  config.mk  st
dwm/src/: config.def.h  config.def.h.orig  config.h  dwm  dwm.c  dwm.c.orig
dwm/st/: config.h  st  x.c
emacs/: init.el  no-evil-init.el
emacs/custom-packages/: replace-selection.el  shifters.el
fastfetch/: config.jsonc
firefox/: query-new-search.sh  switch-tabs-and-raise.sh  switch-tabs.sh  wlr-query-new-search.sh  wlr-switch-tabs-and-raise.sh
foot/: foot.ini
fuzzel/: fuzzel.ini
gnome/: bind-workspace-switching.sh  bind-workspaces-for-all-nums  emacs-run-or-raise.sh  general-run-or-raise.sh  switch-windows-gnome.sh  tile-bot.sh  tile-top.sh  toggle-left-handed.sh  toggle-natural-scroll.sh  toggle-touchpad.sh  unbind-workspace-for-all-nums
gnome/theming/: dark.sh  light.sh  toggle-dark-mode.sh
helix/: config.toml
i3/: bright.sh  caffeine.sh  chromebook-config  config  i3status.conf  miniconfig  power.sh  vol.sh
kak/: kakrc
kitty/: kitty.conf  theme.conf
kwin/: default_scheme.kksrc
labwc/: autostart  environment  menu.xml  rc.xml  toggle-trackpad.sh
labwc-themes/orangish/openbox-3/: themerc
libinput-hwdb-quirks/: 71-nulea-trackball-usb.hwdb  README.md  local-overrides.quirks
mimeapps-backup/: mimeapps.list
neofetch/: config.conf
nvidia-gnome-wayland/: suspend-gnome-shell.sh
nvim/: init.lua  init.vim  lazy-lock.json  vimrc.vim
nvim/lua/config/: options.lua
openbox/: rc.xml
picom/: picom.conf  picom_lightweight.conf
redshift/: redshift.conf
sway/: config  foot_darkmode.sh  foot_lightmode.sh  lock-and-blur.sh  miniconfig
sway/scripts/: bemenu_desktop.sh  bright-down.sh  bright-up.sh  color-picker.sh  copyq-clipboard-history.sh  fuzzyfind.sh  lock-and-blur.sh  mic-mute.sh  mon-config.sh  power-bal.sh  power-perf.sh  power-save.sh  screencast.sh  screenshot-monitor.sh  screenshot-wayfreeze.sh  screenshot.sh  search-with-tracker.sh  switch-window.sh  vol-down.sh  vol-mute.sh  vol-up.sh
tmux/: tmux.conf
waybar/: config.jsonc  dark.css  labwc-conf.json.c  labwc-styles.css  light.css  style.css  waybar-dark.sh  waybar-light.sh
wofi/: config
xdg-desktop-portal/: sway-portals.conf
ydotool/: ydotool-tmp-socket.service
ydotool/ydotool_scripts/: toggle-mmb.sh
(+3 files in other folders)
